--- a/helm-charts/vector/values.yaml
+++ b/helm-charts/vector/values.yaml
@@ -1,16 +1,11 @@
 role: Agent
 
 env:
-  - name: ZO_ROOT_USER_EMAIL
+  - name: OPENOBSERVE_AUTH_B64
     valueFrom:
       secretKeyRef:
-        name: openobserve-root-creds
-        key: ZO_ROOT_USER_EMAIL
-  - name: ZO_ROOT_USER_PASSWORD                                                    
-    valueFrom:
-      secretKeyRef:     
-        name: openobserve-root-creds
-        key: ZO_ROOT_USER_PASSWORD
+        name: openobserve-auth-creds
+        key: auth_b64
   - name: EXCLUDED_NAMESPACES
     value: otel-collector,vector,default,kube-node-lease,kube-public
   - name: ERROR_FILTERED_NAMESPACES
@@ -113,19 +108,19 @@ customConfig:
           
           # Pattern 1: "INFO: message"
           if .level == null { 
-            match, err = parse_regex(.message, r'^(?P<level>(INFO|WARN|WARNING|ERROR|DEBUG|CRITICAL|FATAL)):\s.*')
+            match, err = parse_regex(.message, r'^(?P<level>(DBG|DEBUG|INF|INFO|WARN|WARNING|ERROR|CRITICAL|FATAL)):\s.*')
             if err == null { .level = match.level }
           }
 
           # Pattern 2: "timestamp LEVEL message"
           if .level == null {
-            match, err = parse_regex(.message, r'^\S+\s+(?P<level>(INFO|WARN|WARNING|ERROR|DEBUG|CRITICAL|FATAL))\s.*')
+            match, err = parse_regex(.message, r'^\S+\s+(?P<level>(DBG|DEBUG|INF|INFO|WARN|WARNING|ERROR|CRITICAL|FATAL))\s.*')
             if err == null { .level = match.level }
           }
 
           # Pattern 3: "[INFO] message"
           if .level == null {
-            match, err = parse_regex(.message, r'^\[(?P<level>(INFO|WARN|WARNING|ERROR|DEBUG|CRITICAL|FATAL))\]\s.*')
+            match, err = parse_regex(.message, r'^\[(?P<level>(DBG|DEBUG|INF|INFO|WARN|WARNING|ERROR|CRITICAL|FATAL))\]\s.*')
             if err == null { .level = match.level }
           }
 
@@ -167,19 +162,21 @@ customConfig:
             }
           }
 
-          # Pattern 7: Go-style key=value logs (Grafana / Traefik / MongoDB exporter)
+          # Pattern 7: Go-style key=value logs
           # Example: 'time="2025-11-29T03:19:54Z" level=info msg="..."'
           # Example: 'time=2026-01-01T00:20:28.053Z level=ERROR source=http_error_logger.go:53 msg="..."'
           if .level == null {
-            match, err = parse_regex(.message, r'(?i)level=(?P<level>(info|warn|warning|error|debug|critical|fatal))\b')
+            match, err = parse_regex(.message, r'(?i)level=(?P<level>(dbg|debug|inf|info|warn|warning|error|critical|fatal))\b')
             if err == null {
               level_lower = to_string(match.level)
               level_lower = downcase(level_lower)
-              if level_lower == "error" { .level = "ERROR" }
-              if level_lower == "info" { .level = "INFO" }
-              if level_lower == "warning" { .level = "WARNING" }
-              if level_lower == "warn" { .level = "WARNING" }
+              if level_lower == "dbg" { .level = "DEBUG" }
               if level_lower == "debug" { .level = "DEBUG" }
+              if level_lower == "inf" { .level = "INFO" }
+              if level_lower == "info" { .level = "INFO" }
+              if level_lower == "warn" { .level = "WARNING" }
+              if level_lower == "warning" { .level = "WARNING" }
+              if level_lower == "error" { .level = "ERROR" }
               if level_lower == "critical" { .level = "CRITICAL" }
               if level_lower == "fatal" { .level = "FATAL" }
             }
@@ -281,169 +278,169 @@ customConfig:
     sink_kubernetes_kube-system:
       type: http
       inputs: [log_router.kube_system]
-      uri: http://o2-openobserve-router.openobserve.svc.cluster.local:5080/api/skies-dota/kube-system/_json
-      method: post
+      uri: http://o2-openobserve-router.openobserve.svc.cluster.local:5080
       encoding:
         codec: json
-      auth:
-        strategy: basic
-        user: ${ZO_ROOT_USER_EMAIL}
-        password: ${ZO_ROOT_USER_PASSWORD}
+      request:
+        headers:
+          organization: skies-dota
+          stream-name: kube-system
+          Authorization: Basic ${OPENOBSERVE_AUTH_B64}
     
     sink_kubernetes_openobserve:
       type: http
       inputs: [log_router.openobserve]
-      uri: http://o2-openobserve-router.openobserve.svc.cluster.local:5080/api/skies-dota/openobserve/_json
-      method: post
+      uri: http://o2-openobserve-router.openobserve.svc.cluster.local:5080
       encoding:
         codec: json
-      auth:
-        strategy: basic
-        user: ${ZO_ROOT_USER_EMAIL}
-        password: ${ZO_ROOT_USER_PASSWORD}
+      request:
+        headers:
+          organization: skies-dota
+          stream-name: openobserve
+          Authorization: Basic ${OPENOBSERVE_AUTH_B64}
     
     sink_kubernetes_cnpg-system:
       type: http
       inputs: [log_router.cnpg_system]
-      uri: http://o2-openobserve-router.openobserve.svc.cluster.local:5080/api/skies-dota/cnpg-system/_json
-      method: post
+      uri: http://o2-openobserve-router.openobserve.svc.cluster.local:5080
       encoding:
         codec: json
-      auth:
-        strategy: basic
-        user: ${ZO_ROOT_USER_EMAIL}
-        password: ${ZO_ROOT_USER_PASSWORD}
+      request:
+        headers:
+          organization: skies-dota
+          stream-name: cnpg-system
+          Authorization: Basic ${OPENOBSERVE_AUTH_B64}
     
     sink_kubernetes_grafana:
       type: http
       inputs: [log_router.grafana]
-      uri: http://o2-openobserve-router.openobserve.svc.cluster.local:5080/api/skies-dota/grafana/_json
-      method: post
+      uri: http://o2-openobserve-router.openobserve.svc.cluster.local:5080
       encoding:
         codec: json
-      auth:
-        strategy: basic
-        user: ${ZO_ROOT_USER_EMAIL}
-        password: ${ZO_ROOT_USER_PASSWORD}
+      request:
+        headers:
+          organization: skies-dota
+          stream-name: grafana
+          Authorization: Basic ${OPENOBSERVE_AUTH_B64}
     
     sink_kubernetes_cert-manager:
       type: http
       inputs: [log_router.cert_manager]
-      uri: http://o2-openobserve-router.openobserve.svc.cluster.local:5080/api/skies-dota/cert-manager/_json
-      method: post
+      uri: http://o2-openobserve-router.openobserve.svc.cluster.local:5080
       encoding:
         codec: json
-      auth:
-        strategy: basic
-        user: ${ZO_ROOT_USER_EMAIL}
-        password: ${ZO_ROOT_USER_PASSWORD}
+      request:
+        headers:
+          organization: skies-dota
+          stream-name: cert-manager
+          Authorization: Basic ${OPENOBSERVE_AUTH_B64}
     
     sink_kubernetes_rabbitmq-system:
       type: http
       inputs: [log_router.rabbitmq_system]
-      uri: http://o2-openobserve-router.openobserve.svc.cluster.local:5080/api/skies-dota/rabbitmq-system/_json
-      method: post
+      uri: http://o2-openobserve-router.openobserve.svc.cluster.local:5080
       encoding:
         codec: json
-      auth:
-        strategy: basic
-        user: ${ZO_ROOT_USER_EMAIL}
-        password: ${ZO_ROOT_USER_PASSWORD}
+      request:
+        headers:
+          organization: skies-dota
+          stream-name: rabbitmq-system
+          Authorization: Basic ${OPENOBSERVE_AUTH_B64}
 
-    sink_kubernetes_tempo:
+    sink_kubernetes_tempo:  
       type: http
       inputs: [log_router.tempo]
-      uri: http://o2-openobserve-router.openobserve.svc.cluster.local:5080/api/skies-dota/tempo/_json
-      method: post
+      uri: http://o2-openobserve-router.openobserve.svc.cluster.local:5080
       encoding:
         codec: json
-      auth:
-        strategy: basic
-        user: ${ZO_ROOT_USER_EMAIL}
-        password: ${ZO_ROOT_USER_PASSWORD}
+      request:
+        headers:
+          organization: skies-dota
+          stream-name: tempo
+          Authorization: Basic ${OPENOBSERVE_AUTH_B64}
 
     sink_kubernetes_victoria-metrics:
       type: http
       inputs: [log_router.victoria-metrics]
-      uri: http://o2-openobserve-router.openobserve.svc.cluster.local:5080/api/skies-dota/victoria-metrics/_json
-      method: post
+      uri: http://o2-openobserve-router.openobserve.svc.cluster.local:5080
       encoding:
         codec: json
-      auth:
-        strategy: basic
-        user: ${ZO_ROOT_USER_EMAIL}
-        password: ${ZO_ROOT_USER_PASSWORD}
+      request:
+        headers:
+          organization: skies-dota
+          stream-name: victoria-metrics
+          Authorization: Basic ${OPENOBSERVE_AUTH_B64}
 
     sink_kubernetes_mongodb:
       type: http
       inputs: [log_router.mongodb]
-      uri: http://o2-openobserve-router.openobserve.svc.cluster.local:5080/api/skies-dota/mongodb/_json
-      method: post
+      uri: http://o2-openobserve-router.openobserve.svc.cluster.local:5080
       encoding:
         codec: json
-      auth:
-        strategy: basic
-        user: ${ZO_ROOT_USER_EMAIL}
-        password: ${ZO_ROOT_USER_PASSWORD}
+      request:
+        headers:
+          organization: skies-dota
+          stream-name: mongodb
+          Authorization: Basic ${OPENOBSERVE_AUTH_B64}
 
     sink_kubernetes_redis:
       type: http
       inputs: [log_router.redis]
-      uri: http://o2-openobserve-router.openobserve.svc.cluster.local:5080/api/skies-dota/redis/_json
-      method: post
+      uri: http://o2-openobserve-router.openobserve.svc.cluster.local:5080
       encoding:
         codec: json
-      auth:
-        strategy: basic
-        user: ${ZO_ROOT_USER_EMAIL}
-        password: ${ZO_ROOT_USER_PASSWORD}
+      request:
+        headers:
+          organization: skies-dota
+          stream-name: redis
+          Authorization: Basic ${OPENOBSERVE_AUTH_B64}
 
     sink_kubernetes_rabbitmq:
       type: http
       inputs: [log_router.rabbitmq]
-      uri: http://o2-openobserve-router.openobserve.svc.cluster.local:5080/api/skies-dota/rabbitmq/_json
-      method: post
+      uri: http://o2-openobserve-router.openobserve.svc.cluster.local:5080
       encoding:
         codec: json
-      auth:
-        strategy: basic
-        user: ${ZO_ROOT_USER_EMAIL}
-        password: ${ZO_ROOT_USER_PASSWORD}
+      request:
+        headers:
+          organization: skies-dota
+          stream-name: rabbitmq
+          Authorization: Basic ${OPENOBSERVE_AUTH_B64}
 
     sink_kubernetes_external-dns:
       type: http
       inputs: [log_router.external-dns]
-      uri: http://o2-openobserve-router.openobserve.svc.cluster.local:5080/api/skies-dota/external-dns/_json
-      method: post
+      uri: http://o2-openobserve-router.openobserve.svc.cluster.local:5080
       encoding:
         codec: json
-      auth:
-        strategy: basic
-        user: ${ZO_ROOT_USER_EMAIL}
-        password: ${ZO_ROOT_USER_PASSWORD}
+      request:
+        headers:
+          organization: skies-dota
+          stream-name: external-dns
+          Authorization: Basic ${OPENOBSERVE_AUTH_B64}
 
     # System logs (WARNING+ only)
     sink_system:
       type: http
       inputs: [log_router.system]
-      uri: http://o2-openobserve-router.openobserve.svc.cluster.local:5080/api/skies-dota/system_logs/_json
-      method: post
+      uri: http://o2-openobserve-router.openobserve.svc.cluster.local:5080
       encoding:
         codec: json
-      auth:
-        strategy: basic
-        user: ${ZO_ROOT_USER_EMAIL}
-        password: ${ZO_ROOT_USER_PASSWORD}
+      request:
+        headers:
+          organization: skies-dota
+          stream-name: system_logs
+          Authorization: Basic ${OPENOBSERVE_AUTH_B64}
     
     # All other namespaces that we might missed
     sink_kubernetes_other:
       type: http
       inputs: [log_router.other_namespaces]
-      uri: http://o2-openobserve-router.openobserve.svc.cluster.local:5080/api/skies-dota/other-namespaces/_json
-      method: post
+      uri: http://o2-openobserve-router.openobserve.svc.cluster.local:5080
       encoding:
         codec: json
-      auth:
-        strategy: basic
-        user: ${ZO_ROOT_USER_EMAIL}
-        password: ${ZO_ROOT_USER_PASSWORD}
+      request:
+        headers:
+          organization: skies-dota
+          stream-name: other_namespaces
+          Authorization: Basic ${OPENOBSERVE_AUTH_B64}
